--- a/.github/workflows/UI-Test.yml
+++ b/.github/workflows/UI-Test.yml
@@ -17,11 +17,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: Make launch script executable
-        run: chmod +x ./launch.sh
-
-      - name: Run launch script
-        run: ./launch.sh
+#      - name: Make launch script executable
+#        run: chmod +x ./launch.sh
+#
+#      - name: Run launch script
+#        run: ./launch.sh
 
       - name: Cache Gradle Caches
         uses: actions/cache@v1
@@ -44,10 +44,10 @@ jobs:
           api-level: 28
           script: ./gradlew connectedCheck
 
-      - name: Make stop script executable
-        if: always()
-        run: chmod +x ./stop.sh
-
-      - name: Run stop script
-        if: always()
-        run: ./stop.sh
+#      - name: Make stop script executable
+#        if: always()
+#        run: chmod +x ./stop.sh
+#
+#      - name: Run stop script
+#        if: always()
+#        run: ./stop.sh
